# RevEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  Pine.sln  README.en.md  README.md  custom_init.lua  dependencies.lua  premake5.lua
Rev/: CMakeLists.txt  premake5.lua
Rev/Source/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Rev/Source/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLPixelFormat.cpp  OpenGLPixelFormat.h  OpenGLRHI.cpp  OpenGLRHI.h  OpenGLRenderTarget.cpp  OpenGLRenderTarget.h  OpenGLRenderTarget2D.cpp  OpenGLRenderTarget2D.h  OpenGLSampler.cpp  OpenGLSampler.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderFactory.cpp  OpenGLShaderFactory.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLTexture2DArray.cpp  OpenGLTexture2DArray.h  OpenGLTexture3D.cpp  OpenGLTexture3D.h  OpenGLTextureCube.cpp  OpenGLTextureCube.h  OpenGLTextureCubeArray.cpp  OpenGLTextureCubeArray.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Rev/Source/Platform/Shaderc/: ShadercFactory.cpp  ShadercFactory.h  ShadercUtils.cpp  ShadercUtils.h
Rev/Source/Platform/Vulkan/: VkAllocator.cpp  VkAllocator.h  VkBuffer.cpp  VkBuffer.h  VkContext.cpp  VkContext.h  VkCore.cpp  VkCore.h  VkDefines.h  VkDevice.cpp  VkDevice.h  VkFrameData.cpp  VkFrameData.h  VkInitializer.cpp  VkInitializer.h  VkPixelFormat.cpp  VkPixelFormat.h  VkSampler.cpp  VkShader.cpp  VkShader.h  VkSwapChain.cpp  VkSwapChain.h  VkTexture.cpp  VkTexture.h  VkTexture2D.cpp  VkTexture2D.h  VkUtils.cpp  VkUtils.h  VkVertexInputDesc.cpp
Rev/Source/Platform/VulkanRHI/: VkBuffer.cpp  VkBuffer.h  VkContext.cpp  VkContext.h  VkCore.cpp  VkCore.h  VkInitializer.cpp  VkInitializer.h  VkPixelFormat.cpp  VkPixelFormat.h  VkSampler.cpp  VkSampler.h  VkShader.cpp  VkTexture.cpp  VkTexture.h  VkTexture2D.cpp  VkTexture2D.h  VkUtils.cpp  VkVertexInputDesc.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanCore.cpp  VulkanCore.h  VulkanDynamicRHI.cpp  VulkanDynamicRHI.h  VulkanEnum.h  VulkanFrameData.cpp  VulkanFrameData.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPixelFormat.cpp  VulkanPixelFormat.h  VulkanPrimitive.cpp  VulkanPrimitive.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderTarget.cpp  VulkanRenderTarget.h  (+20 more)
Rev/Source/Private/Archive/: Archive.cpp  FileArchive.cpp
Rev/Source/Private/Asset/: AssetLibrary.cpp  MaterialStorage.cpp  MeshPrimitiveStorage.cpp  MeshStorage.cpp  TextureStorage.cpp
Rev/Source/Private/Core/: Application.cpp  Buffer.cpp  File.cpp  FileSystem.cpp  Hash.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Name.cpp  Path.cpp  UUID.cpp  Window.cpp
Rev/Source/Private/HAL/: FIleManager.cpp  PhysFileManager.cpp  PhysFileManager.h
Rev/Source/Private/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
Rev/Source/Private/Misc/: ArgParser.cpp  DeferredDelete.cpp  MemoryStack.cpp
Rev/Source/Private/Render/: Camera.cpp  Light.cpp  PixelFormat.cpp  RenderCmd.cpp  RenderCore.cpp  RenderLayer.cpp  RenderOptions.cpp  RenderUtils.cpp  Renderer.cpp  UniformLocation.h  UniformLocation.hpp
Rev/Source/Private/World/: Entity.cpp  Scene.cpp  SceneLayer.cpp
Rev/Source/Public/: Rev.h
Rev/src/: Rev.h
Rev/src/Platform/: Platform.cpp
Rev/src/Platform/GLFW/: GLFWWindow.h
Rev/src/Platform/OpenGL/: OpenGLFrameBuffer.cpp  OpenGLRHI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Rev/src/Rev/Core/: Application.cpp  Application.h  Base.h  Buffer.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  Layer.cpp  Layer.h  Log.cpp  Log.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Rev/src/Rev/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  (+1 more)
Sandbox/: CMakeLists.txt  FrameGraph.dot  Sandbox.vcxproj  premake5.lua
Sandbox/Assets/Shaders/: DeferredVertex.glsl  DefferedCombinePixel.glsl  OpaquePbrPixel.glsl
Sandbox/Engine/Shaders/: Basic.glsl  Basic.rsf  BasicFS.rsf  BasicVS.rsf  CommonVS.glsl  CommonVS.rsf  EmptyPS.rsf  ForwardPbrPS.rsf  GammaCorrectFS.rsf  GammaCorrectPS.rsf  Global.rsh  GlobalInclude.rsh  Light.rsh  PostProcessVS.rsf  PostVS.rsf  ShadowMapVS.rsf  SkyboxPS.rsf  SkyboxVS.rsf
Sandbox/Game/Shaders/: Example.glsl  Example.rsf  ExampleFS.rsf  ExamplePS.rsf  ExampleVS.rsf
Sandbox/Source/: ExampleLayer.cpp  ExampleLayer.h  ExampleMaterial.h  Main.cpp  SandboxApp.cpp
Sandbox/assets/shaders/: Basic.glsl  example.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  ExampleMaterial.h  SandboxApp.cpp
(+559 files in other folders)
